# POE2Bot

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  item_emojis.py  pagination.py  pyproject.toml
src/poe2bot/: bot.py  item_emojis.py
