[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
]

[project]
name = "POE2Bot"
description = "So this is a bot that does a few cool things related to poe2"
readme = {file = "README.md", content-type="text/markdown"}

authors = [
    { name = "Przemysław", email = "przemyslaw.sadowski2004@gmail.com" },
]

requires-python = ">= 3.11, < 3.12"

dynamic = [
    "version", # handled by setuptools_scm, see at the end
]

dependencies = [
    "importlib-resources >= 5.4, < 8 ; python_version < '3.10'",
    "importlib-metadata >= 5.2, < 8 ; python_version < '3.10'",
    "requests",
    "dotenv",
    "discord",
]

[tool.setuptools_scm]
write_to = "src/poe2bot/version.txt"
git_describe_command = "git describe --tags --dirty --match 'v*' --abbrev=8"
